# poliz

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  insurapro.conf  poliz.conf  repo_link.txt
.github/workflows/: test.yml
docs/: architecture.md
docs/adr/: 00_backlog.md  ADR-001.md  ADR-007.md  ADR-017.md  ADR-018.md  ADR-019.md  ADR-020.md  ADR-021.md  ADR-022.md  ADR-023.md  ADR-024.md  ADR-025.md
docs/daily_logs/: 2026-04-02.md  2026-04-03.md  2026-04-09.md  2026-05-11.md  2026-05-14.md  2026-05-15.md  2026-05-16.md  2026-05-19.md  2026-05-20.md  2026-05-21.md  2026-05-22.md  2026-05-25.md
docs/design_patterns/: belt_and_suspenders_pattern.md  iife.cpp  repository_pattern.cpp
src/: CMakeLists.txt  main.cpp
src/cli/: CMakeLists.txt  application.cpp  application.hpp  cli_helper.cpp  cli_helper.hpp  client_controller.cpp  client_controller.hpp  client_view.cpp  client_view.hpp  i_entity_controller.hpp  interaction_controller.cpp  interaction_controller.hpp  interaction_view.cpp  interaction_view.hpp  menu.cpp  policy_controller.cpp  policy_controller.hpp  policy_view.cpp  policy_view.hpp
src/data/: CMakeLists.txt  csv_client_repository.cpp  csv_client_repository.hpp  csv_interaction_repository.cpp  csv_interaction_repository.hpp  csv_policy_repository.cpp  csv_policy_repository.hpp  file_handle.cpp  file_handle.hpp
src/domain/: CMakeLists.txt  client.cpp  client.hpp  client_status.cpp  i_client_repository.hpp  i_interaction_repository.hpp  i_policy_repository.hpp  interaction.cpp  interaction.hpp  interaction_data.hpp  interaction_status.cpp  interaction_status.hpp  policy.cpp  policy.hpp  policy_data.hpp  policy_status.cpp  strops.cpp  utils.cpp  utils.hpp
src/service/: CMakeLists.txt  auto_save_service.cpp  auto_save_service.hpp  client_service.cpp  client_service.hpp  interaction_service.cpp  interaction_service.hpp  policy_service.cpp  policy_service.hpp
tests/: CMakeLists.txt  integration_test.cpp  integrations_tests.cpp  test_calculate_amount.cpp  test_domain.cpp  test_utils.cpp  tests_interaction_status.cpp  tests_status_converter.cpp  tests_strops.cpp  tests_utils.cpp
